[B] Fix SR visibility of header items
Uses CSS visibility property to hide collapsed submenus and search bar from screen readers

--- a/components/global/Header/_subnavigation.scss
+++ b/components/global/Header/_subnavigation.scss
@@ -11,7 +11,8 @@ $_bg-color: functions.sass-palette(neutral02);
   overflow: auto;
   color: $_color;
   background-color: $_bg-color;
-  transition: transform 0.25s ease-in-out;
+  visibility: hidden;
+  transition: transform 0.25s ease-in-out, visibility 0s 0.25s;
 
   .c-nav-list--mobile & {
     top: 0;
@@ -20,6 +21,8 @@ $_bg-color: functions.sass-palette(neutral02);
 
     &--is-active {
       transform: translateX(-100%);
+      visibility: visible;
+      transition: transform 0.25s ease-in-out;
     }
   }
 
@@ -30,6 +33,8 @@ $_bg-color: functions.sass-palette(neutral02);
 
     &--is-active {
       transform: translateY(0);
+      visibility: visible;
+      transition: transform 0.25s ease-in-out;
     }
   }
 
